# zowsup

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_crypto_migration.py
agent/: __main__.py  schemas.py  server.py  wslog.py
app/: async_command_exec.py  device_env.py  network_env.py  yowbot.py  yowbot_layer.py  zowbot.py  zowbot_layer.py  zowbot_values.py
axolotl/: axolotladdress.py  sessionbuilder.py  sessioncipher.py
common/: consolemain.py  rc2.py  utils.py
conf/: config.conf.example  constants.py  logging_config.py
consonance/: async_handshake.py
data/: mex_argo_dict.json  whatsapp-android-mex_argo_wire_types.argo
docs/: agent-api.md  agent-assessment-report-2026-06-12.md  agent-assessment-report-2026-06-13.md  agent-assessment-report.md  agent-cluster-design.md  agent-implementation-plan.md  agent-multi-process-plan.md  assessment-and-next-todo.md  avatar-system.md  conversation-crud-plan.md  conversation-crud-verification.md  plugin-system.md  satisfaction-plugin-plan.md  work-plan-2026-06-11.md  work-summary-2026-06-10.md
proto/: e2e.proto  e2e_pb2.py  protocol.proto  wa_struct.proto  zowsup.proto  zowsup_pb2.py
script/: devicelogoutfetch.py  devicelogoutsend.py  export6.py  import6.py  interactivethread.py  main.py  regwithcode.py  reset2fa.py
tests/: conftest.py  test_phase10_plugin.py  test_phase11_satisfaction.py  test_phase1_auth.py  test_phase2_bots.py  test_phase3_cmd.py  test_phase5_logs.py  test_phase6_import_export.py  test_phase7_e2e.py  test_phase8_conversation.py  test_phase9_cluster.py
tools/: wslog.py
(+268 files in other folders)
