[project]
name = "app"
version = "0.1.0"
package-mode = false
description = "WA Protocol"
authors = [
    {name = "zowsup",email = "zowsup@dev.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4"
dependencies = [
    "protobuf (==3.20.2)",
    "requests (==2.32.0)",
    "websocket-client (>=1.8.0,<2.0.0)",
    "pysocks (>=1.7.1,<2.0.0)",
    "ffmpeg (>=1.4,<2.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "qrcode (>=8.1,<9.0)",
    "python-axolotl-curve25519 (>=0.4.1.post2,<0.5.0)",
    "dissononce (>=0.34.3,<0.35.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "apkutils (>=2.0.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.taskipy.settings]
runner = "dotenv run"

[tool.taskipy.tasks]
qrcode = 'python ./script/regwithscan.py'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
